--- a/src/lk/ijse/hos/view/ReportForm.fxml
+++ b/src/lk/ijse/hos/view/ReportForm.fxml
@@ -1,24 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import java.net.URL?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="lk.ijse.hos.controller.ReportFormController">
+<AnchorPane id="AnchorPane" prefHeight="563.0" prefWidth="777.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.hos.controller.ReportFormController">
     <stylesheets>
         <URL value="@/lk/ijse/hos/view/style/reportform.css" />
     </stylesheets>
    <children>
-      <JFXTextField layoutX="58.0" layoutY="103.0" prefHeight="43.0" prefWidth="211.0" text="Appointment ID" />
-      <JFXTextField layoutX="58.0" layoutY="157.0" prefHeight="43.0" prefWidth="211.0" text="Patient ID" />
-      <JFXTextField layoutX="58.0" layoutY="216.0" prefHeight="43.0" prefWidth="211.0" text="Date" />
-      <JFXTextField labelFloat="true" layoutX="58.0" layoutY="45.0" prefHeight="43.0" prefWidth="211.0" promptText="Report ID" />
-      <JFXButton layoutX="357.0" layoutY="328.0" prefHeight="26.0" prefWidth="84.0" text="Save" />
-      <JFXButton layoutX="471.0" layoutY="328.0" prefHeight="26.0" prefWidth="84.0" text="Cancel" />
-      <JFXTextField layoutX="58.0" layoutY="285.0" prefHeight="43.0" prefWidth="211.0" text="Details" />
-      <JFXTextField layoutX="58.0" layoutY="341.0" prefHeight="43.0" prefWidth="211.0" text="Treatments" />
-      <Button layoutX="455.0" layoutY="19.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="106.0" text="Back" />
+      <JFXTextField layoutX="269.0" layoutY="63.0" prefHeight="17.0" prefWidth="211.0" text="Appointment ID" />
+      <JFXTextField layoutX="14.0" layoutY="114.0" prefHeight="17.0" prefWidth="211.0" text="Patient ID" />
+      <JFXTextField labelFloat="true" layoutX="14.0" layoutY="63.0" prefHeight="21.0" prefWidth="211.0" promptText="Report ID" />
+      <JFXButton layoutX="291.0" layoutY="223.0" prefHeight="26.0" prefWidth="84.0" text="Save" />
+      <JFXButton layoutX="394.0" layoutY="223.0" prefHeight="26.0" prefWidth="84.0" text="Cancel" />
+      <JFXTextField layoutX="14.0" layoutY="160.0" prefHeight="28.0" prefWidth="211.0" text="Details" />
+      <JFXTextField layoutX="269.0" layoutY="160.0" prefHeight="28.0" prefWidth="211.0" text="Treatments" />
+      <JFXDatePicker layoutX="269.0" layoutY="114.0" prefHeight="28.0" prefWidth="219.0" />
+      <JFXButton layoutX="147.0" layoutY="223.0" prefHeight="28.0" prefWidth="144.0" text="New Report*" />
+      <ImageView fitHeight="64.0" fitWidth="84.0" layoutX="699.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assest/home-icon.png" />
+         </image>
+      </ImageView>
+      <TableView layoutY="258.0" prefHeight="200.0" prefWidth="535.0">
+        <columns>
+          <TableColumn prefWidth="75.0" text="C1" />
+          <TableColumn prefWidth="75.0" text="C2" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
