--- a/src/lk/ijse/hos/view/ReportForm.fxml
+++ b/src/lk/ijse/hos/view/ReportForm.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import java.net.URL?>
@@ -10,30 +11,36 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="563.0" prefWidth="777.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.hos.controller.ReportFormController">
+<AnchorPane id="AnchorPane" fx:id="root" prefHeight="563.0" prefWidth="777.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.hos.controller.ReportFormController">
     <stylesheets>
         <URL value="@/lk/ijse/hos/view/style/reportform.css" />
     </stylesheets>
    <children>
-      <JFXTextField layoutX="269.0" layoutY="63.0" prefHeight="17.0" prefWidth="211.0" text="Appointment ID" />
-      <JFXTextField layoutX="14.0" layoutY="114.0" prefHeight="17.0" prefWidth="211.0" text="Patient ID" />
-      <JFXTextField labelFloat="true" layoutX="14.0" layoutY="63.0" prefHeight="21.0" prefWidth="211.0" promptText="Report ID" />
-      <JFXButton layoutX="291.0" layoutY="223.0" prefHeight="26.0" prefWidth="84.0" text="Save" />
-      <JFXButton layoutX="394.0" layoutY="223.0" prefHeight="26.0" prefWidth="84.0" text="Cancel" />
-      <JFXTextField layoutX="14.0" layoutY="160.0" prefHeight="28.0" prefWidth="211.0" text="Details" />
-      <JFXTextField layoutX="269.0" layoutY="160.0" prefHeight="28.0" prefWidth="211.0" text="Treatments" />
-      <JFXDatePicker layoutX="269.0" layoutY="114.0" prefHeight="28.0" prefWidth="219.0" />
-      <JFXButton layoutX="147.0" layoutY="223.0" prefHeight="28.0" prefWidth="144.0" text="New Report*" />
-      <ImageView fitHeight="64.0" fitWidth="84.0" layoutX="699.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+      <JFXTextField fx:id="txtPatientID" labelFloat="true" layoutX="14.0" layoutY="114.0" prefHeight="17.0" prefWidth="211.0" promptText="Patient ID" />
+      <JFXTextField fx:id="txtReprtID" labelFloat="true" layoutX="14.0" layoutY="63.0" prefHeight="21.0" prefWidth="211.0" promptText="Report ID" />
+      <JFXButton fx:id="btnSave" layoutX="291.0" layoutY="223.0" onAction="#onSavebtnClick" prefHeight="26.0" prefWidth="84.0" text="Save" />
+      <JFXButton fx:id="btnCancel" layoutX="546.0" layoutY="223.0" onAction="#onCancelBtnClick" prefHeight="26.0" prefWidth="84.0" text="Cancel" />
+      <JFXTextField fx:id="txtDetails" labelFloat="true" layoutX="14.0" layoutY="160.0" prefHeight="28.0" prefWidth="211.0" promptText="Details" />
+      <JFXTextField fx:id="txtTreatments" labelFloat="true" layoutX="269.0" layoutY="160.0" prefHeight="28.0" prefWidth="211.0" promptText="Treatments" />
+      <JFXDatePicker fx:id="Datepicker" layoutX="269.0" layoutY="114.0" prefHeight="28.0" prefWidth="219.0" />
+      <JFXButton fx:id="btnNewReport" layoutX="147.0" layoutY="223.0" onAction="#onNewReportbtnClick" prefHeight="28.0" prefWidth="144.0" text="New Report*" />
+      <ImageView fx:id="navigateHome" fitHeight="64.0" fitWidth="84.0" layoutX="699.0" layoutY="13.0" onMouseClicked="#navigateHome" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assest/home-icon.png" />
          </image>
       </ImageView>
-      <TableView layoutY="258.0" prefHeight="200.0" prefWidth="535.0">
+      <TableView fx:id="tblReports" layoutY="258.0" prefHeight="200.0" prefWidth="777.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
+          <TableColumn prefWidth="93.0" text="Report ID" />
+          <TableColumn prefWidth="132.0" text="Appointment_ID" />
+            <TableColumn prefWidth="100.0" text="Patient_ID" />
+            <TableColumn prefWidth="99.0" text="Date" />
+            <TableColumn prefWidth="163.0" text="Details" />
+            <TableColumn prefWidth="189.0" text="Teatments" />
         </columns>
       </TableView>
+      <JFXButton fx:id="btnGenerateReport" layoutX="310.0" layoutY="493.0" onAction="#onGenerateReportbtnClick" prefHeight="28.0" prefWidth="178.0" style="-fx-background-color: #00ff00;" text="generate Report" />
+      <JFXButton fx:id="btnDeleteReport" layoutX="404.0" layoutY="223.0" onAction="#onDeletebtnClick" prefHeight="28.0" prefWidth="112.0" text="Delete Report" />
+      <JFXComboBox fx:id="cmbAppointmentID" layoutX="262.0" layoutY="63.0" onAction="#CmbAppointmentIDOnload" prefHeight="28.0" prefWidth="219.0" promptText="Appointment ID" />
    </children>
 </AnchorPane>
