--- a/src/lk/ijse/hos/view/ReportForm.fxml
+++ b/src/lk/ijse/hos/view/ReportForm.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import java.net.URL?>
@@ -41,6 +40,6 @@
       </TableView>
       <JFXButton fx:id="btnGenerateReport" layoutX="310.0" layoutY="493.0" onAction="#onGenerateReportbtnClick" prefHeight="28.0" prefWidth="178.0" style="-fx-background-color: #00ff00;" text="generate Report" />
       <JFXButton fx:id="btnDeleteReport" layoutX="404.0" layoutY="223.0" onAction="#onDeletebtnClick" prefHeight="28.0" prefWidth="112.0" text="Delete Report" />
-      <JFXComboBox fx:id="cmbAppointmentID" layoutX="262.0" layoutY="63.0" onAction="#CmbAppointmentIDOnload" prefHeight="28.0" prefWidth="219.0" promptText="Appointment ID" />
+      <JFXTextField fx:id="txtAppointmentID" labelFloat="true" layoutX="258.0" layoutY="63.0" prefHeight="21.0" prefWidth="211.0" promptText="AppointmentID" />
    </children>
 </AnchorPane>
