--- a/src/lk/ijse/hos/view/PatientForm.fxml
+++ b/src/lk/ijse/hos/view/PatientForm.fxml
@@ -27,7 +27,7 @@
          </image>
       </ImageView>
       <JFXButton fx:id="btnNewPatient" layoutX="290.0" layoutY="71.0" onAction="#OnNewPatientBtnClick" prefHeight="28.0" prefWidth="115.0" text="New Patient*" />
-      <TableView fx:id="tblPatients" layoutY="300.0" prefHeight="200.0" prefWidth="694.0">
+      <TableView fx:id="tblPatients" layoutY="300.0" onMouseClicked="#onTblrawClick" prefHeight="200.0" prefWidth="694.0">
         <columns>
           <TableColumn prefWidth="100.0" text="Patient ID" />
           <TableColumn prefWidth="130.0" text="Patient Name" />
